# fourier-sandbox

./: .gitignore  Dockerfile  README  README.md
cpp/: CMakeLists.txt  build.sh  core  run_me
cpp/include/: .fourier.h.swp  base_periodic_signal.h  base_signal.h  constants.h  fourier.h  rect.h  sampled_signal.h  signal_factory.h  simple_io.h  sin_wave.h  types.h
cpp/old_include/: .base_signal.h.swp  fourier.h  signal_factory.h  sin_wave.h  types.h
cpp/old_src/: .main.cpp.swp  base_signal.cpp  fourier.cpp  main.cpp  rect.cpp  signal_factory.cpp  sin_wave.cpp
cpp/src/: .fourier.cpp.swp  .main.cpp.swp  .rect.cpp.swp  base_periodic_signal.cpp  base_signal.cpp  fourier.cpp  main.cpp  rect.cpp  sampled_signal.cpp  signal_factory.cpp  simple_io.cpp  sin_wave.cpp
scripts/bash/: clone_latest.sh
